Use the right view observer for events.  Fixes some crashes.  Bug 279205, r+sr=roc